Removing Dark Mode Toggle for clarity, fixing format of boxes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ html, body {
 	color: var(--font-color);
 	font-family: 'Raleway', sans-serif;
 	font-weight: 100;
-	height: 250vmin;
+	height: 200vh;
 	margin: 0;
 }
 
@@ -97,21 +97,26 @@ a {
 	animation-name: FadeIn;
 }
 
+.main {
+	position: absolute;
+	width: 100vw;
+	height: 40vh;
+	top: 100vh;
+	float: left;
+	display: inline-block;
+}
+
 .banner {
- position: relative;
- width: 25vw;
- height: 30vw;
- left: 8vw;
- /* border-radius: 25px; */
- transition: box-shadow .3s;
- border: 1.5px solid var(--border-color);
- margin: 15px;
- margin-top: 50vh;
- padding-top: 10px;
- display: inline-block;
- top: 2vw;
- text-align: center;
- line-height: 1em;		
+	width: 30vw;
+	height: 15vw;
+	border: 1.5px solid black;
+	margin: 15px;
+	padding-top: 10px;
+	float: left;
+	top: 2vw;
+	text-align: center;
+	line-height: 1em;
+	display: block;
 }
 
 .banner:hover {
@@ -128,7 +133,7 @@ a {
 .scroll-down {
 	position: absolute;
 	left: 50%;
-	top: 86vmin;
+	top: 90vh;
 	display: block;
 	text-align: center;
 	font-size: 20px;
@@ -245,12 +250,16 @@ For Tablets
 
 	.scroll-down {
 		position: absolute;
-		top: 100vmin;
+		top: 86vh;
+	}
+	
+	.main {
+		top: 70vh;
 	}
 	
 	.banner {
-		position: absolute;
-		top: 70%;
+		width: 90vw !important;
+		height: 30vw !important;
 	}
 
 }
